// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegionAdminSettings should be invalid for bad id 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`RegionAdminSettings should be invalid for bad sku 1 1`] = `
{
  "sku": "yup:string.sku",
}
`;

exports[`RegionAdminSettings should be invalid for bad sku 2 1`] = `
{
  "sku": "yup:string.sku",
}
`;

exports[`RegionAdminSettings should be invalid for empty cover image 1`] = `
{
  "coverImage": {
    "mobile": {
      "key": "yup:string.min",
      "options": {
        "min": 1,
        "path": "coverImage.mobile",
      },
    },
  },
}
`;

exports[`RegionAdminSettings should be invalid for empty sku 1`] = `
{
  "sku": "yup:string.sku",
}
`;

exports[`RegionAdminSettings should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`RegionAdminSettings should be invalid for float size 1`] = `
{
  "mapsSize": {
    "key": "yup:number.integer",
    "options": {
      "path": "mapsSize",
    },
  },
}
`;

exports[`RegionInput should be invalid for bad bounds 1`] = `
{
  "bounds": {
    "key": "yup:array.min",
    "options": {
      "min": 3,
      "path": "bounds",
    },
  },
}
`;

exports[`RegionInput should be invalid for bad id 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`RegionInput should be invalid for bad pois 1`] = `
{
  "pois": [
    ,
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "pois[1].id",
        },
      },
    },
  ],
}
`;

exports[`RegionInput should be invalid for bad season numeric (bad half-month) 1`] = `
{
  "seasonNumeric": [
    ,
    {
      "key": "yup:number.max",
      "options": {
        "max": 23,
        "path": "seasonNumeric[1]",
      },
    },
    {
      "key": "yup:number.min",
      "options": {
        "min": 0,
        "path": "seasonNumeric[2]",
      },
    },
  ],
}
`;

exports[`RegionInput should be invalid for bad season numeric (too many items) 1`] = `
{
  "seasonNumeric": {
    "key": "yup:array.max",
    "options": {
      "max": 24,
      "path": "seasonNumeric",
    },
  },
}
`;

exports[`RegionInput should be invalid for empty name 1`] = `
{
  "name": "yup:string.nonEmpty",
}
`;

exports[`RegionInput should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`RegionInput should be invalid for null bounds 1`] = `
{
  "bounds": "yup:mixed.required",
}
`;

exports[`RegionInput should be invalid for null name 1`] = `
{
  "name": "yup:mixed.required",
}
`;
